Archive2/3f/df62d54dee7001/output
main.cpp:26:18: error: 'tree_node' was not declared in this scope
     shared_stack<tree_node*> stack;
                  ^
main.cpp:26:28: error: template argument 1 is invalid
     shared_stack<tree_node*> stack;
                            ^
